--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> XXXXXX </title>
+    <title> Strimmer is 🔥 </title>
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <style>
         body {
@@ -59,7 +59,7 @@
     </style>
 </head>
 <body>
-    <div class="video-title"> XXXXXX <span aria-label="smile" role="img"></span></div>
+    <div class="video-title"> Strimmer is 🔥 <span aria-label="smile" role="img"></span></div>
 <script type="text/javascript">
   atOptions = {
   	'key' : '281ad8525430aef7936dbd51dbb2cc46',
@@ -74,8 +74,8 @@
   src="https://beginshello.com/281ad8525430aef7936dbd51dbb2cc46/invoke.js"
 ></script>
     <div class="video-wrapper">
-        <video autoplay loop playsinline controls poster="https://cdn.aceimg.com/3fac94f99.jpg">
-            <source src="https://cdn.videy.co/E8ihRfyT1.mp4" type="video/mp4">
+        <video autoplay loop playsinline controls poster="https://cdn.imgupscaler.ai/datarm/imgupscaler/v2_image_upscale/2025-12-16/output/041e1ca6-ed74-49f0-9a26-17ca1578dd4f.jpg">
+            <source src="https://cdn.videy.co/yAKkF9281.mp4" type="video/mp4">
         </video>
        </div>
 <script
