--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         }
         .ad-banner-inside {
             position: absolute;
-            top: 0;
+            top: 20;
             left: 50%;
             transform: translateX(-50%);
             width: 320px;
@@ -59,31 +59,25 @@
     </style>
 </head>
 <body>
-    <div class="video-title"> Strimmer is 🔥 <span aria-label="smile" role="img"></span></div>
-<script type="text/javascript">
+<div class="ad-banner-inside">
+<script>
   atOptions = {
-  	'key' : '281ad8525430aef7936dbd51dbb2cc46',
-  	'format' : 'iframe',
-  	'height' : 50,
-  	'width' : 320,
-  	'params' : {}
+    'key' : '88542d881fd03085cb1c1bb5a0cd7a54',
+    'format' : 'iframe',
+    'height' : 50,
+    'width' : 320,
+    'params' : {}
   };
 </script>
-<script
-  type="text/javascript"
-  src="https://beginshello.com/281ad8525430aef7936dbd51dbb2cc46/invoke.js"
-></script>
+<script src="https://braceslinear.com/88542d881fd03085cb1c1bb5a0cd7a54/invoke.js"></script>
+</div>
     <div class="video-wrapper">
         <video autoplay loop playsinline controls poster="https://cdn.imgupscaler.ai/datarm/imgupscaler/v2_image_upscale/2025-12-16/output/041e1ca6-ed74-49f0-9a26-17ca1578dd4f.jpg">
             <source src="https://cdn.videy.co/yAKkF9281.mp4" type="video/mp4">
         </video>
        </div>
-<script
-  async="async"
-  data-cfasync="false"
-  src="https://beginshello.com/46866105b24346c18256dc17a0df3c2e/invoke.js"
-></script>
-<div id="container-46866105b24346c18256dc17a0df3c2e"></div>
+<script async="async" data-cfasync="false" src="https://braceslinear.com/9bcdea4a86809574df124c776acac64d/invoke.js"></script>
+<div id="container-9bcdea4a86809574df124c776acac64d"></div>
 
 <!-- Histats.com  START  (aync)-->
 <script type="text/javascript">var _Hasync= _Hasync|| [];
