--- a/index.html
+++ b/index.html
@@ -1,85 +1,62 @@
-
-
 <!DOCTYPE html>
 <html lang="id">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Strimmer is 🔥 </title>
-    <link rel="icon" type="image/svg+xml" href="favicon.svg">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            background-color: #ffffff;
-            padding: 20px;
-        }
-        .video-title {
-            font-size: 1em;
-            font-weight: bold;
-            margin-bottom: 18px;
-            letter-spacing: 1px;
-            color: black;
-        }
-        .video-wrapper {
-            position: relative;
-            width: 100%;
-            max-width: 720px;
-            margin: 0 auto;
-        }
-        video {
-            width: 100%;
-            max-width: 100%;
-            border-radius: 10px;
-            display: block;
-        }
-        .ad-banner-inside {
-            position: absolute;
-            top: 20;
-            left: 50%;
-            transform: translateX(-50%);
-            width: 320px;
-            height: 50px;
-            background: rgba(255,255,255,0.92);
-            border-radius: 10px 10px 0 0;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.10);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            z-index: 2;
-            overflow: hidden;
-        }
-        @media (max-width: 400px) {
-            .ad-banner-inside {
-                width: 95vw;
-                height: 40px;
-                font-size: 0.85em;
-            }
-        }
-    </style>
+    <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
+    <title> Strimmer is on fleek! 😂 </title>
+<style>
+body {
+    margin: 0;
+    padding: 0;
+    background: #000;
+    font-family: Arial, sans-serif;
+}
+header {
+    display: flex;
+    justify-content: center;
+    margin: 10px 0;
+    position: sticky;
+    z-index: 10;
+}
+.video-container {
+    position: relative;
+    width: 100%;
+    max-width: 800px;
+    margin: auto;
+    padding-top: 71.43%; /* 7:5 */
+
+}
+.video-container video,
+.video-container iframe {    
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+</style>
 </head>
 <body>
-<div class="ad-banner-inside">
+
+<header>
 <script>
   atOptions = {
-    'key' : '88542d881fd03085cb1c1bb5a0cd7a54',
+    'key' : 'e3390cf0a8cdf953ded85bdaaf3046a5',
     'format' : 'iframe',
-    'height' : 50,
-    'width' : 320,
+    'height' : 250,
+    'width' : 300,
     'params' : {}
   };
 </script>
-<script src="https://braceslinear.com/88542d881fd03085cb1c1bb5a0cd7a54/invoke.js"></script>
-</div>
-    <div class="video-wrapper">
-        <video autoplay loop playsinline controls poster="https://cdn.imgupscaler.ai/datarm/imgupscaler/v2_image_upscale/2025-12-16/output/041e1ca6-ed74-49f0-9a26-17ca1578dd4f.jpg">
-            <source src="https://cdn.videy.co/yAKkF9281.mp4" type="video/mp4">
-        </video>
-       </div>
-<script async="async" data-cfasync="false" src="https://braceslinear.com/9bcdea4a86809574df124c776acac64d/invoke.js"></script>
-<div id="container-9bcdea4a86809574df124c776acac64d"></div>
+<script src="https://braceslinear.com/e3390cf0a8cdf953ded85bdaaf3046a5/invoke.js"></script>
+</header>
 
-<!-- Histats.com  START  (aync)-->
+<div class="video-container">
+<video controls autoplay playsinline preload="metadata" controlslist="nodownload nofullscreen noremoteplayback" disablepictureinpicture>
+    <source src="https://cdn.videy.co/yAKkF9281.mp4" type="video/mp4">
+</video></div>
+
+	<!-- Histats.com  START  (aync)-->
 <script type="text/javascript">var _Hasync= _Hasync|| [];
 _Hasync.push(['Histats.start', '1,4992245,4,511,95,18,00000000']);
 _Hasync.push(['Histats.fasi', '1']);
@@ -91,5 +68,12 @@ hs.src = ('//s10.histats.com/js15_as.js');
 })();</script>
 <noscript><a href="/" target="_blank"><img  src="//sstatic1.histats.com/0.gif?4992245&101" alt="" border="0"></a></noscript>
 <!-- Histats.com  END  -->
+
 </body>
 </html>
+
+<head>
+<!-- JuicyAds PopUnders v3 Start -->
+<script type="text/javascript" src="https://js.juicyads.com/jp.php?c=44640333v2a4u4r2p28403a4a4&u=https%3A%2F%2Fwww.juicyads.rocks"></script>
+<!-- JuicyAds PopUnders v3 End -->
+<head>
